--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,27 +1,131 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Privacy Policy - Pingbix</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Pingbix</title>
+    <style>
+        :root {
+            --primary-color: #0066ff; /* A professional tech blue */
+            --text-color: #333;
+            --bg-color: #f4f7f9;
+            --card-bg: #ffffff;
+            --border-color: #e1e4e8;
+        }
+
+        body {
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--bg-color);
+            margin: 0;
+            padding: 40px 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: var(--card-bg);
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+        }
+
+        h1 {
+            color: var(--primary-color);
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+            border-bottom: 2px solid var(--border-color);
+            padding-bottom: 10px;
+        }
+
+        .last-updated {
+            font-size: 0.9rem;
+            color: #666;
+            margin-bottom: 30px;
+        }
+
+        h2 {
+            font-size: 1.4rem;
+            margin-top: 30px;
+            color: #222;
+        }
+
+        p {
+            margin-bottom: 15px;
+        }
+
+        .highlight-box {
+            background-color: #f0f7ff;
+            border-left: 4px solid var(--primary-color);
+            padding: 15px 20px;
+            margin: 20px 0;
+            border-radius: 0 8px 8px 0;
+        }
+
+        .contact-section {
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid var(--border-color);
+        }
+
+        .email-link {
+            color: var(--primary-color);
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        .email-link:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 600px) {
+            body { padding: 20px 10px; }
+            .container { padding: 20px; }
+            h1 { font-size: 1.8rem; }
+        }
+    </style>
 </head>
 <body>
 
-<h1>Privacy Policy</h1>
+<div class="container">
+    <h1>Privacy Policy</h1>
+    <p class="last-updated">Effective Date: January 2026</p>
 
-<p>Pingbix is a Communication Platform as a Service (CPaaS).</p>
+    <section>
+        <p><strong>Pingbix</strong> is a leading Communication Platform as a Service (CPaaS). We are committed to protecting your privacy and ensuring transparency in how we handle data.</p>
+    </section>
 
-<p>Pingbix uses Meta platforms including Facebook, Instagram, and WhatsApp APIs
-to enable business messaging services.</p>
+    <section>
+        <h2>1. Meta Platform Integration</h2>
+        <p>Pingbix utilizes Meta platforms, including <strong>Facebook, Instagram, and WhatsApp APIs</strong>, to enable seamless business messaging services. By using our platform, you acknowledge that data processing occurs in accordance with both this policy and Meta’s respective privacy terms.</p>
+    </section>
 
-<p>We collect and process data only as required to provide messaging services,
-including message content, metadata, and account identifiers.</p>
+    <section>
+        <h2>2. Data Collection and Usage</h2>
+        <div class="highlight-box">
+            We collect and process data <strong>only as required</strong> to provide high-quality messaging services. This includes:
+            <ul>
+                <li>Message content and metadata</li>
+                <li>Account identifiers</li>
+                <li>Technical logs for service stability</li>
+            </ul>
+        </div>
+        <p>We do not sell personal data to third parties. Data is used strictly for service delivery, regulatory compliance, and platform security.</p>
+    </section>
 
-<p>We do not sell personal data. Data is used only for service delivery,
-compliance, and security.</p>
+    <section>
+        <h2>3. Data Protection and Rights</h2>
+        <p>Your data security is our priority. This policy applies to all Pingbix applications, integrations, and API connections.</p>
+        <p>Users have the right to request access to their data or request permanent deletion of their records from our systems.</p>
+    </section>
 
-<p>Users may request access to or deletion of their data by contacting:
-<strong>whatsapp@pingbix.com</strong></p>
-
-<p>This policy applies to all Pingbix applications and integrations.</p>
+    <section class="contact-section">
+        <h2>Contact Us</h2>
+        <p>For any privacy-related inquiries or data requests, please contact our privacy team at:</p>
+        <p><strong>Email:</strong> <a href="mailto:whatsapp@pingbix.com" class="email-link">whatsapp@pingbix.com</a></p>
+    </section>
+</div>
 
 </body>
 </html>
