--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -47,7 +47,7 @@
     <div class="container mx-auto px-6 relative" id="navbar-wrapper">
         <nav class="flex justify-between items-center py-4">
             <div>
-                <a href="/"><img alt="Pingbix Logo" class="h-12" src="/images.png" /></a>
+                <a href="/"><img alt="Pingbix Logo" class="h-12" src="https://www.pingbix.com/static/navbar-logo.png" /></a>
             </div>
 
             </div>
